--- a/README.org
+++ b/README.org
@@ -6,9 +6,7 @@
 
 * GitHub username: fmesa1213
 
-* Notes: I struggled with this lab, especially task B and D. I was wondering after this lab was submitted if you could send me the correct codes 
-so I could see where I went wrong. And I was wondering if I could set up an appointment with you because I would love to talk to you one-on-one 
-and go over this. 
+* Notes: I struggled with this lab, especially task B and D. I was wondering after this lab was submitted if you could send me the correct codes so I could see where I went wrong. And I was wondering if I could set up an appointment with you because I would love to talk to you one-on-one and go over this. 
 
 
 * General instructions:
